add cc-webfonts (with simple doc)

--- a/__doc__/app/index.html
+++ b/__doc__/app/index.html
@@ -10,6 +10,7 @@
     <link rel="import" href="../../components/cc-button/cc-button.html" />
     <link rel="import" href="../../components/cc-icon/cc-icon.html" />    
     <link rel="import" href="../../components/cc-input/cc-input.html">
+    <link rel="import" href="../../components/cc-webfonts/cc-webfonts.html">
 </head>
 <body>
     <div class="left" id="left-list">     
