--- a/__doc__/app/index.html
+++ b/__doc__/app/index.html
@@ -11,7 +11,9 @@
     <link rel="import" href="../../components/cc-icon/cc-icon.html" />    
     <link rel="import" href="../../components/cc-input/cc-input.html">
     <link rel="import" href="../../components/cc-webfonts/cc-webfonts.html">
+    <link rel="import" href="../../components/cc-scroll/cc-scroll.html">    
 </head>
+
 <body>
     <div class="left" id="left-list">     
         <div class="title">cc-UI-kit</div>
