--- a/__doc__/app/index.html
+++ b/__doc__/app/index.html
@@ -12,6 +12,7 @@
     <link rel="import" href="../../components/cc-input/cc-input.html">
     <link rel="import" href="../../components/cc-webfonts/cc-webfonts.html">
     <link rel="import" href="../../components/cc-scroll/cc-scroll.html">    
+    <link rel="import" href="../../components/cc-mask/cc-mask.html">        
 </head>
 
 <body>
